--- a/bouquetapp/templates/bouquets/list.html
+++ b/bouquetapp/templates/bouquets/list.html
@@ -8,6 +8,8 @@
   <body>
     <h1>Welcome to the Flower Shop!</h1>
 
+    <a href="{% url 'bouquetapp:bouquet_form' %}">Add Bouquet</a>
+
     <ul>
       {% for bouquet in all_bouquets %}
       <li>
