when user clicks on boquet name in list, they are directed to a details page for the bouquet. Details page contains bouquet name, occasion, and a list of flowers in that bouquet as well as their quantity

--- a/bouquetapp/templates/bouquets/list.html
+++ b/bouquetapp/templates/bouquets/list.html
@@ -13,7 +13,7 @@
     <ul>
       {% for bouquet in all_bouquets %}
       <li>
-        {{ bouquet.name }}
+        <a href="{% url 'bouquetapp:bouquet' bouquet.id %}">{{ bouquet.name }}</a>
         <div><em>Perfect for {{ bouquet.occasion }}</em></div>
       </li>
       {% endfor %}
