--- a/bouquetapp/templates/bouquets/detail.html
+++ b/bouquetapp/templates/bouquets/detail.html
@@ -1,23 +1,28 @@
 {% load static %}
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="utf-8">
-        <title>Flower Shop</title>
-    </head>
-    <body>
-        <h1>{{ bouquet.name }}</h1>
-        <h3><em>{{ bouquet.occasion }}</em></h3>
+  <head>
+    <meta charset="utf-8" />
+    <title>Flower Shop</title>
+  </head>
+  <body>
+    <h1>{{ bouquet.name }}</h1>
+    <h3><em>{{ bouquet.occasion }}</em></h3>
 
-        {% if bouquet.flowersWithQuantity.1.name is not None %}
-        <ul>
-            {% for flower in bouquet.flowersWithQuantity %}
-            <li>{{ flower.name }} (x{{ flower.quantity }})</li>
-            {% endfor %}
-        </ul>
-        {% else %}
-        <div>No flowers currently in this bouquet</div>
-        {% endif %}
-        
-    </body>
+    {% if bouquet.flowersWithQuantity.1.name is not None %}
+    <ul>
+      {% for flower in bouquet.flowersWithQuantity %}
+      <li>{{ flower.name }} (x{{ flower.quantity }})</li>
+      <form action="{% url 'bouquetapp:bouquet' bouquet.id %}" method="POST">
+        {% csrf_token %}
+        <input type="hidden" name="flower_id" value="{{ flower.id }}" />
+        <input type="hidden" name="actual_method" value="DELETE" />
+        <button>Delete Flower</button>
+      </form>
+      {% endfor %}
+    </ul>
+    {% else %}
+    <div>No flowers currently in this bouquet</div>
+    {% endif %}
+  </body>
 </html>
